--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,4 +32,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: APK
-        path: android/bin/*.apk
+        path: bin/*.apk
