--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,11 @@ jobs:
         key: ${{ runner.os }}
     - name: Build
       run: make android-${{ matrix.target }}
+    - name: Version
+      run: touch VERSION_"$(git describe --always)"
     - uses: actions/upload-artifact@v2
       with:
         name: APK
-        path: bin/*.apk
+        path: |
+          bin/*.apk
+          VERSION_*
