cleanup PIP_INSTALL etc.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,9 +63,9 @@ jobs:
           if grep -q stretch /etc/os-release; then
             python3.7 -mvenv ~/env
             source ~/env/bin/activate
-            PIP_INSTALL="pip install" ./scripts/setup-user.sh
+            PIP_INSTALL="pip3 install" ./scripts/setup-user.sh
           else
-            ./scripts/setup-user.sh
+            PIP_INSTALL="pip3 install --user" ./scripts/setup-user.sh
           fi
         '
     - name: System info
