--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,6 +55,8 @@ jobs:
         ~vagrant/build/dev.obfusk.sokobang/scripts/setup-sqlite.sh
     - name: Install dependencies (2)
       run: |
+        mkdir /opt/android-sdk
+        chown vagrant:vagrant /opt/android-sdk
         su - vagrant -c '
           set -e
           ~/build/dev.obfusk.sokobang/scripts/setup-ndk.sh
